<resources>
    <string name="app_name">VoteItUp</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Strings related to sharedPreferences -->
    <string name="shared_preferences">upm.dam.voteitup.sharedpreferences</string>
    <string name="shared_preferences_token">token</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="action_register">¡Regístrate!</string>
    <string name="error_invalid_email">El email es inválido</string>
    <string name="error_invalid_password">La contraseña introducida es demasiado corta</string>
    <string name="error_incorrect_password">Email o contraseña incorrectos</string>
    <string name="error_field_required">Este campo es necesario</string>

    <!-- Strings related to the API -->
    <string name="api_url">https://polar-oasis-43680.herokuapp.com</string>

    <!-- Strings related to the app strings -->
    <string name="vote">Votar</string>
    <string name="recent_activity">Actividad reciente</string>
    <string name="home">Inicio</string>
    <string name="near">Cerca</string>
    <string name="profile">Perfil</string>
    <string name="settings">Ajustes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Example_Answer">Example Answer</string>
    <string name="crear_encuesta">Crear Encuesta</string>
    <string name="add_the_title_and_hastag">Add the title and hastag</string>
    <string name="respuestas">Respuestas</string>
    <string name="add_location_text">Add Location</string>
    <string name="save_poll_text">Save Poll</string>
    <string name="error_desc_empty">Necestiamos alguna description</string>
    <string name="error_two_answers_needed">Se necesitan al menos dos posibles respuestas</string>
    <string name="add_a_new_answer_here">Add a new answer here</string>
    <string name="prompt_UserName">User Name</string>
    <string name="prompt_bio">Bio</string>
    <string name="small_bio_about_myself">Small bio about myself</string>
    <string name="title_activity_near_by">Map</string>
    <string name="posicion_actual">Posicion Actual</string>
    <string name="country">Country</string>
    <string name="city">City</string>
</resources>
